--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,3 +18,7 @@ steps:
           --platform managed \
           --region us-central1 \
           --allow-unauthenticated
+options:
+  logging: 'CLOUD_LOGGING_ONLY'
+
+service_account: '574565058652-compute@developer.gserviceaccount.com'
