--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,24 +1,39 @@
 steps:
-  # Step 1: Build Docker container
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/simple-python-app:$COMMIT_SHA', '.']
-
-  # Step 2: Push Docker container to GCR
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/simple-python-app:$COMMIT_SHA']
-
-  # Step 3: Deploy to Cloud Run
+  # Step 1: Copy files to the Cloud Storage bucket
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        gcloud run deploy simple-python-app \
-          --image gcr.io/$PROJECT_ID/simple-python-app:$COMMIT_SHA \
-          --platform managed \
-          --region us-central1 \
-          --allow-unauthenticated
+        gsutil cp * gs://my-github-pipeline-bucket/
+
+  # Step 2: Build and tag Docker image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/hello-world:$COMMIT_SHA', '.']
+
+  # Step 3: Push Docker image to Google Container Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/hello-world:$COMMIT_SHA']
+
+  # Step 4: Deploy to Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    args:
+      - 'run'
+      - 'deploy'
+      - 'hello-world'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/hello-world:$COMMIT_SHA'
+      - '--platform'
+      - 'managed'
+      - '--region'
+      - 'us-central1'
+      - '--allow-unauthenticated'
+
+images:
+  - 'gcr.io/$PROJECT_ID/hello-world:$COMMIT_SHA'
+
 options:
   logging: 'CLOUD_LOGGING_ONLY'
 
 service_account: '574565058652-compute@developer.gserviceaccount.com'
+
